Added story div to index file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <img src="images/koala.png" alt="icon-img" />
         </div>
         <a href="#home">Home</a>
-        <a href="#news">News</a>
+        <a href="#story">Story</a>
         <a href="#contact">Contact</a>
         <a href="#about">About</a>
       </div>
@@ -45,6 +45,15 @@
         </div>
       </div>
     </center>
-    
+    <center>
+      <div class="story" id="story">
+        <h2>Our story</h2><br /><br /><br/>
+        <p>We provide a living space for the entire koala population that lives in the net, 
+        from food and housing to luxury and leisure life.
+        Join us to explore the experience of common living in a great community.
+        Unlimited bamboo supply, unlimited fun.
+      </p>
+      </div>
+    </center>
   </body>
 </html>
