--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>HW1</title>
   </head>
   <body>
     <nav class="navbar">
+      <div class="icon">
+        <img src="images/koala.png" alt="icon-img" />
+      </div>
       <div class="nav-container">
-        <div class="icon">
-          <img src="images/koala.png" alt="icon-img" />
-        </div>
         <a href="#home">Home</a>
         <a href="#story">Story</a>
-        <a href="#contact">Contact</a>
+        <a href="#services">Services</a>
         <a href="#about">About</a>
       </div>
     </nav>
     <header>
-      <div class="header">
+      <div class="header" id="home">
         <img src="images/mount.png" alt="header-img" />
         <div class="header-text">Kualas in the forest</div>
       </div>
@@ -47,7 +48,7 @@
     </center>
     <center>
       <div class="story" id="story">
-        <h2>Our story</h2><br /><br /><br/>
+        <h2 style="text-align: left;">Our story</h2>
         <p>We provide a living space for the entire koala population that lives in the net, 
         from food and housing to luxury and leisure life.
         Join us to explore the experience of common living in a great community.
@@ -55,5 +56,45 @@
       </p>
       </div>
     </center>
+    <br /><br/><br/><br/>
+    <h2 style="text-align: center; margin-bottom: 0px;">Our services</h2>
+    <div class="cards" id="services">
+      <div class="card">
+        <img src="images/home.png" class="card-img-top" alt="---" />
+        <div class="card-body">
+          <h5 class="card-title">Home</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/salad.png" class="card-img-top" alt="---" />
+        <div class="card-body">
+          <h5 class="card-title">Food</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-warning bg-gardient">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/community.png" class="card-img-top" alt="---" />
+        <div class="card-body">
+          <h5 class="card-title">Community</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-danger">Go somewhere</a>
+        </div>
+      </div>
+
+      <div class="card">
+        <img src="images/bamboo.png" class="card-img-top" alt="---" />
+        <div class="card-body">
+          <h5 class="card-title">Bamboo</h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-success">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <br/><br/><br/><br/>
   </body>
 </html>
