--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <a href="#home">Home</a>
         <a href="#story">Story</a>
         <a href="#services">Services</a>
-        <a href="#about">About</a>
       </div>
     </nav>
     <header>
@@ -96,5 +95,8 @@
       </div>
     </div>
     <br/><br/><br/><br/>
+    <div class="footer">
+      Copyright @ 2022 Koala Forest
+    </div>
   </body>
 </html>
