--- a/index.html
+++ b/index.html
@@ -6,25 +6,68 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <title>HW1</title>
+    <link rel="stylesheet" href="/Navbar-Right-Links-Dark-icons.css">
+    <link rel="stylesheet" href="/sticky-dark-top-nav-with-dropdown.css"> 
+    <title>Koala Forest</title>
+
+    <style>
+      @media (max-width:420px) {
+        #background_image {
+          height: 100%;
+        }
+
+        #header-text{
+          font-size: 20px;
+          width: 100%;
+          top: 20%;
+        }
+      }
+  
+      @media (min-width:421px) {
+        #background_image {
+          height: 70vh;
+        }
+  
+      }
+    </style>
   </head>
+
   <body>
-    <nav class="navbar">
-      <div class="icon">
-        <img src="images/koala.png" alt="icon-img" />
-      </div>
-      <div class="nav-container">
-        <a href="#home">Home</a>
-        <a href="#story">Story</a>
-        <a href="#services">Services</a>
+
+  <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top bg-dark" style="background-color: #353636!important;">
+      <img  class="text-center" height="45" width="45" src="images/koala.png">
+      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false">
+        <span class="navbar-toggler-icon "></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav" style="margin-left: 10px;">
+        <ul class="navbar-nav">
+          <li class="nav-item active">
+            <a class="nav-link" href="#home" >Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#story" >Story</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#services" >Services</a>
+          </li>
+        </ul>
       </div>
     </nav>
-    <header>
-      <div class="header" id="home">
-        <img src="images/mount.png" alt="header-img" />
-        <div class="header-text">Kualas in the forest</div>
-      </div>
-    </header>
+  <!-- Navbar -->
+
+  <!-- First segment - Background image -->
+  <div class="container-fluid mt-5 p-0">
+    <div class="bg-image d-flex justify-content-center align-items-center" id="home">
+      <img src="images/mount.png" alt="header-img" width="100%" style="width: 100%; height: 100%; object-fit: contain;" />
+      <div class="header-text px-5 py-1" id="header-text">Kualas in the forest</div>
+    </div>
+    </div>
+  </div>
+  <br/><br/>
+  <!-- First segment - Background image -->
+
+  <!-- Second segment - Image and form -->
     <center>
       <div class="form">
         <div class="form-img">
@@ -45,6 +88,9 @@
         </div>
       </div>
     </center>
+  <!-- Second segment - Image and form -->
+
+  <!-- Third segment - Story -->
     <center>
       <div class="story" id="story">
         <h2 style="text-align: left;">Our story</h2>
@@ -55,6 +101,9 @@
       </p>
       </div>
     </center>
+  <!-- Third segment - Story -->
+
+  <!-- Fourth segment - Services -->
     <br /><br/><br/><br/>
     <h2 style="text-align: center; margin-bottom: 0px;">Our services</h2>
     <div class="cards" id="services">
@@ -66,7 +115,7 @@
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
-
+      
       <div class="card">
         <img src="images/salad.png" class="card-img-top" alt="---" />
         <div class="card-body">
@@ -95,8 +144,17 @@
       </div>
     </div>
     <br/><br/><br/><br/>
+  <!-- Fourth segment - Services -->
+
+  <!-- Footer -->
     <div class="footer">
       Copyright @ 2022 Koala Forest
     </div>
+  <!-- Footer -->
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
   </body>
 </html>
